Fixing onload visibility for new date.

--- a/whelping-calculator-form/includes/whelping-calculator.css
+++ b/whelping-calculator-form/includes/whelping-calculator.css
@@ -52,3 +52,11 @@ fieldset {
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
+#demo {
+  display:block;
+  text-align: center;
+  margin: 0px 4em 0px 4em;
+  padding: 10px 10px 10px 10px;
+  background: blue;
+}
